--- a/Templates/home.html
+++ b/Templates/home.html
@@ -19,10 +19,24 @@
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
         </p>
           <h2 class="text-center mt-2 mb-4">Open Positions</h2>
-          <p>To Do-Show the jobs here</p>
-          <div style = "text-align: center;">
-          <button>Contact Us</button>
-          <p>Copyright 2022,Jovian</p>
+          <div>
+            {% for job in jobs %}
+            <div class="border-bottom row" style="margin-bottom: 16px; padding-bottom: 8px;">
+                <div class="col-9">
+                    <h4 style="color: rgb(120, 120, 120);">{{ job.title }}</h4>
+                    <div>{{ job.location }}</div>
+                    <div>{{ job.salary }}</div>
+                </div>
+                <div class="col-3 text-right"> <!-- Modified this line -->
+                    <button type="button" class="btn btn-dark">Apply</button>
+                </div>
+            </div>
+            {% endfor %}
+            <div style="text-align: center;">
+                <button class="btn btn-primary btn-lg">Contact Us</button>
+                <p class="mt-4">Copyright 2022, Jovian</p>
+            </div>
+            
         </div>
         <div>
     
