--- a/Templates/home.html
+++ b/Templates/home.html
@@ -11,7 +11,7 @@
 <body>
     <div class ="container">
     <h1 class="text-center mt-2 mb-4">Jovian Careers</h1>
-    <img class = "img-fluid" id="banner" src="//127.0.0.1:5000/static/banner.jpeg" >
+    <img class = "img-fluid" id="banner" src="{{ url_for('static', filename='banner.jpeg') }}"> >
     <h2 class="text-center">About Jovian</h2>
     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
