--- a/Templates/home.html
+++ b/Templates/home.html
@@ -9,6 +9,7 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
+    {% include 'nav.html'%}
     <div class ="container">
     <h1 class="text-center mt-2 mb-4">Jovian Careers</h1>
     <img class = "img-fluid" id="banner" src="{{ url_for('static', filename='banner.jpeg') }}"> >
@@ -28,16 +29,20 @@
                     <div>{{ job.salary }}</div>
                 </div>
                 <div class="col-3 text-right"> <!-- Modified this line -->
-                    <button type="button" class="btn btn-dark">Apply</button>
+                    <a href="mailto:hello@jovian.ai?subject=Application for {{job['title']}}" type="button" class="btn btn-dark">Apply</a>
                 </div>
             </div>
             {% endfor %}
             <div style="text-align: center;">
-                <button class="btn btn-primary btn-lg">Contact Us</button>
+                <a href="mailto:hello@jovian.ai?subject=Contact Us" class="btn btn-primary btn-lg">Contact Us</a>
                 <p class="mt-4">Copyright 2022, Jovian</p>
             </div>
             
         </div>
-    
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2022, Jovian</p>
+    </footer>
+
 </body>
 </html>
